--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,10 +7,13 @@ environment:
   sdk: ^3.7.2
 
 dependencies:
+  cupertino_icons: ^1.0.8
   flutter:
     sdk: flutter
+
   flutter_localizations:
     sdk: flutter
+
   flutter_riverpod: ^3.0.1
   go_router: ^16.2.4
   intl: ^0.20.2
