--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
 
   flutter_riverpod: ^3.0.1
   go_router: ^16.2.4
+  http: ^1.5.0
   intl: ^0.20.2
   intl_phone_field: ^3.2.0
   shared_preferences: ^2.5.3
